[package]
name = "eftrs"
version = "0.1.0"
authors = ["Filip Wasil <filip.wasil@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Ammo = { path = "./libs/Ammo"}
Weapons = { path = "./libs/Weapons"}
Mods = { path = "./libs/Mods"}
itertools = "0.9.0"
log = "0.4.8"

[workspace]
members = [
  "libs/Ammo",
  "libs/Weapons",
  "libs/Mods",
]